# bimpy

./: .gitignore  README.md  __init__.py  bim.py  cli.py  extract_zone.py  main.py  pyproject.toml  requirements.txt  setup.cfg
functions/: __init__.py  add_sensors_json.py  check_all_output.py  check_geometry_corrected.py  check_ifc.py  check_output.py  diagnose_ifc.py  extract_building.py  extract_zone.py  find_zone_and_sample.py  ifc_tools.py  init.py  merge_ifc.py  recenter_merged.py
